--- a/documention/manual/the-book/install-and-test-it.html
+++ b/documention/manual/the-book/install-and-test-it.html
@@ -42,6 +42,7 @@
                         <div class="layout-cell content clearfix"><article class="post article">
                                 <h2 class="postheader">install and test it</h2>
                                 <div class="postcontent postcontent-0 clearfix"><p><span style="font-family: Helvetica, arial, freesans, clean, sans-serif; font-size: 28px; font-weight: bold; line-height: 33px; color: rgb(0, 0, 0); background-color: rgb(255, 255, 255);">install</span><br></p>
+<p style="margin-top: 0px; margin-bottom: 15px; font-family: Helvetica, arial, freesans, clean, sans-serif; font-size: 14px; text-align: start;">clone project , from command/bash line run : git clone https://github.com/roozbeh360/dota-2-engine.git dota2engine</p>
 <p style="margin-top: 0px; margin-bottom: 15px; font-family: Helvetica, arial, freesans, clean, sans-serif; font-size: 14px; text-align: start;">first of all you should enable these extentions in php.ini or on your host .</p>
 <p style="margin-top: 0px; margin-bottom: 15px; font-family: Helvetica, arial, freesans, clean, sans-serif; font-size: 14px; text-align: start;">&nbsp;find these lines and remove ; from beginning .</p>
 <p style="margin-top: 15px; margin-bottom: 15px; font-family: Helvetica, arial, freesans, clean, sans-serif; font-size: 14px; text-align: start;">;extension=php_curl.dll ;</p>
